--- a/backEnd/.vscode/settings.json
+++ b/backEnd/.vscode/settings.json
@@ -2,5 +2,6 @@
   "python.linting.pylintEnabled": true,
   "python.linting.enabled": true,
   "python.pythonPath": "C:\\Users\\Akbar\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe",
-  "python.formatting.provider": "autopep8"
+  "python.formatting.provider": "autopep8",
+  "python.linting.pylintArgs": ["--load-plugins", "pylint_flask_sqlalchemy", "--errors-only"]
 }
