--- a/backEnd/serverless.yml
+++ b/backEnd/serverless.yml
@@ -40,16 +40,16 @@ provider:
 
 functions:
   app:
-    handler: wsgi.handler
+    handler: wsgi_handler.handler
     events:
       - http: ANY /
       - http: 'ANY {proxy+}'
   getUser:
-    handler: wsgi.handler
+    handler: wsgi_handler.handler
     events:
       - http: 'GET /users/{proxy+}'
   createUser:
-    handler: wsgi.handler
+    handler: wsgi_handler.handler
     events:
       - http: 'POST /users'
 
